# Course-Work-Ostap-Kilbasovych-2024

Tumor_Simulation/: .gitignore  Automata.cpp  Automata.hpp  AutomataMPI.cpp  AutomataMPI.hpp  AutomataMPI3D.cpp  AutomataMPI3D.hpp  CMakeLists.txt  CMakeLists.txt.bak  Cell.cpp  Cell.hpp  DiffusionReaction2D.cpp  DiffusionReaction2D.hpp  DiffusionReaction3D.cpp  DiffusionReaction3D.hpp  Tumor_Simulation.cbp  automata_2d.cpp  hostsfile.txt  main.cpp  mainDiffusionReaction  mainDiffusionReaction.cpp  main_automataMPI.cpp  main_automataMPI3D.cpp
